# test-action

./: README.md  build-images.yaml  config.yaml  deployment.yaml  pyproject.toml
.github/: build-images.yml
.github/workflows/: deploy.yaml  failure.yaml  matrix_images.yaml  pr_closed.yaml  pur_closed.yaml  release.yaml  tag_semver.yaml  test.yaml  test_action-flavour-images-matrix-generator.yaml  test_deploy.yaml  test_manual_deployment_dispatch.yaml  test_pull_request_deployment_dispatch.yaml  test_push_deployment_dispatch.yaml  test_release_deployment_dispatch.yaml  test_v3_action_state_repo_update_image.yaml  test_v4_action_state_repo_update_image.yaml  testaction_deployment_dispatch.yaml  update-image-v4.yaml
app1/des/: images.yaml
app1/pre/: images.yaml
app1/pro/: images.yaml
app2/dev/: images.yaml
app2/pre/: images.yaml
app2/pro/: images.yaml
foz/hellok8s/dev/: images.yaml
foz/hellok8s/pre/: images.yaml
mondo/hellok8s/dev/: images.yaml
mondo/hellok8s/pre/: images.yaml
tenant1/release1/dev/: images.yaml
tenant1/release1/pre/: images.yaml
tenant2/releaseB/dev/: images.yaml
vigo/hellok8s/dev/: images.yaml
vigo/hellok8s/pre/: images.yaml
