[tool.poetry]
name = "poetry-demo"
version = "0.0.5"
description = ""
authors = ["AlbertoFemenias <alberto.femenias@udc.es>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
